правки по логике