@@ -1,5 +1,6 @@
 package com.matrix.controller;
 
+import com.matrix.dto.mappers.CommonMapper;
 import com.matrix.dto.request.CreateTicketRequest;
 import com.matrix.dto.response.ApiResponse;
 import com.matrix.dto.response.TicketResponse;
@@ -13,7 +14,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/tickets")
@@ -25,8 +25,7 @@ public class TicketController extends BaseController {
     @PostMapping
     public ResponseEntity<ApiResponse<TicketResponse>> createTicket(@Valid @RequestBody CreateTicketRequest request) {
         Ticket ticket = ticketService.createTicket(request);
-        TicketResponse response = convertToResponse(ticket);
-        return created("Ticket created successfully", response);
+        return created("Ticket created successfully", CommonMapper.map(ticket));
     }
 
     @PutMapping("/{id}/assign")
@@ -34,8 +33,7 @@ public class TicketController extends BaseController {
             @PathVariable Long id,
             @RequestParam RoleEnum role) {
         Ticket ticket = ticketService.assignTicket(id, role);
-        TicketResponse response = convertToResponse(ticket);
-        return success("Ticket assigned successfully", response);
+        return success("Ticket assigned successfully", CommonMapper.map(ticket));
     }
 
     @PutMapping("/{id}/status/{status}")
@@ -49,51 +47,12 @@ public class TicketController extends BaseController {
     @GetMapping
     public ResponseEntity<ApiResponse<List<TicketResponse>>> getAllTickets() {
         List<Ticket> tickets = ticketService.findAll();
-        List<TicketResponse> responses = tickets.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-        return success(responses);
+        return success(tickets.stream().map(CommonMapper::map).toList());
     }
 
     @GetMapping("/status/{status}")
     public ResponseEntity<ApiResponse<List<TicketResponse>>> getTicketsByStatus(@PathVariable TicketStatusEnum status) {
         List<Ticket> tickets = ticketService.getTicketsByStatus(status);
-        List<TicketResponse> responses = tickets.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-        return success(responses);
-    }
-
-    @GetMapping("/role/{role}/status/{status}")
-    public ResponseEntity<ApiResponse<List<TicketResponse>>> getTicketsByRoleAndStatus(
-            @PathVariable RoleEnum role,
-            @PathVariable TicketStatusEnum status) {
-        List<Ticket> tickets = ticketService.getTicketsByRoleAndStatus(role, status);
-        List<TicketResponse> responses = tickets.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-        return success(responses);
-    }
-
-    @PostMapping("/{id}/escalate-mass-glitch")
-    public ResponseEntity<ApiResponse<Void>> escalateMassGlitch(@PathVariable Long id) {
-        ticketService.escalateMassGlitch(id);
-        return success("Mass glitch escalation checked");
-    }
-
-    private TicketResponse convertToResponse(Ticket ticket) {
-        TicketResponse response = new TicketResponse();
-        response.setId(ticket.getId());
-        response.setTitle(ticket.getTitle());
-        response.setDescription(ticket.getDescription());
-        response.setThreatLevel(ticket.getThreatLevel());
-        response.setImportanceLevel(ticket.getImportanceLevel());
-        response.setAssignedToRole(ticket.getAssignedToRole());
-        response.setAnomalyType(ticket.getAnomalyType());
-        response.setMatrixCoordinates(ticket.getMatrixCoordinates());
-        response.setCreatedAt(ticket.getCreatedAt());
-        response.setUpdatedAt(ticket.getUpdatedAt());
-        response.setStatus(ticket.getStatus());
-        return response;
+        return success(tickets.stream().map(CommonMapper::map).toList());
     }
 }
